fixed li layout bug
git-svn-id: file:///Users/thosch/test/mycore-svn/svn/documentation/trunk@28394 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/src/documentation/skins/mycore/css/mycore.css
+++ b/src/documentation/skins/mycore/css/mycore.css
@@ -456,5 +456,4 @@
     ul.minitoc ul.minitoc li {
         margin-left: 20px;
         }
-    a[name]:after {content:" "; display:block; padding:10px;}
 }
